Fix block icon size so it alignes with block name field

--- a/style.css
+++ b/style.css
@@ -89,15 +89,15 @@ body {
 
 .block-icon {
     padding: 4px;
-    border: 1px solid #E4E4E7;
-    border-radius: 6px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 0 2px #fff;
 }
 
 .block-icon:hover {
     cursor: pointer;
-    border-color: var( --color-blue );
     background-color: var( --color-blue-light );
-    box-shadow: 0 0 0 1px var( --color-blue );
+    box-shadow: 0 0 0 2px var( --color-blue );
 }
 
 .block-icon svg {
@@ -113,12 +113,15 @@ body {
     padding-left: 8px;
     font-size: 22px;
     color: var( --color-heading );
-    margin-left: 8px;
+    margin-left: 12px;
     font-weight: 500;
     flex-grow: 1;
     border-radius: 3px;
 }
 
+.block-name:hover {
+    background-color: #F3F3F4;
+}
 .block-name:focus {
     outline: none;
     background-color: var( --color-blue-light );
